logs/dag_id=dag_with_postgres_operator_v1/run_id=manual__2024-03-12T11:02:39.728258+00:00/task_id=create_postgres_table/attempt=1.log
[2024-03-12T11:02:42.442+0000] {taskinstance.py:1979} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: dag_with_postgres_operator_v1.create_postgres_table manual__2024-03-12T11:02:39.728258+00:00 [queued]>
[2024-03-12T11:02:42.515+0000] {taskinstance.py:1979} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: dag_with_postgres_operator_v1.create_postgres_table manual__2024-03-12T11:02:39.728258+00:00 [queued]>
[2024-03-12T11:02:42.523+0000] {taskinstance.py:2193} INFO - Starting attempt 1 of 6
[2024-03-12T11:02:42.621+0000] {taskinstance.py:2214} INFO - Executing <Task(PostgresOperator): create_postgres_table> on 2024-03-12 11:02:39.728258+00:00
[2024-03-12T11:02:42.649+0000] {standard_task_runner.py:60} INFO - Started process 1594 to run task
[2024-03-12T11:02:42.672+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'dag_with_postgres_operator_v1', 'create_postgres_table', 'manual__2024-03-12T11:02:39.728258+00:00', '--job-id', '872', '--raw', '--subdir', 'DAGS_FOLDER/dag_with_postgres_operator.py', '--cfg-path', '/tmp/tmph6_hogtp']
[2024-03-12T11:02:42.683+0000] {standard_task_runner.py:88} INFO - Job 872: Subtask create_postgres_table
[2024-03-12T11:02:43.023+0000] {task_command.py:423} INFO - Running <TaskInstance: dag_with_postgres_operator_v1.create_postgres_table manual__2024-03-12T11:02:39.728258+00:00 [running]> on host 26e63b1d0d39
[2024-03-12T11:02:43.318+0000] {taskinstance.py:2510} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='daniel' AIRFLOW_CTX_DAG_ID='dag_with_postgres_operator_v1' AIRFLOW_CTX_TASK_ID='create_postgres_table' AIRFLOW_CTX_EXECUTION_DATE='2024-03-12T11:02:39.728258+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2024-03-12T11:02:39.728258+00:00'
[2024-03-12T11:02:43.321+0000] {sql.py:276} INFO - Executing:  create table if not exists dag_runs(
                dt_date,
                dag_id character varying,
                primery key (dt,dag_id)

        )
[2024-03-12T11:02:43.356+0000] {base.py:83} INFO - Using connection ID 'postgres_localhost' for task execution.
[2024-03-12T11:02:43.397+0000] {base.py:83} INFO - Using connection ID 'postgres_localhost' for task execution.
[2024-03-12T11:02:43.453+0000] {sql.py:457} INFO - Running statement:  create table if not exists dag_runs(
                dt_date,
                dag_id character varying,
                primery key (dt,dag_id)

        ), parameters: None
[2024-03-12T11:02:43.464+0000] {taskinstance.py:2728} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 444, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 414, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/operators/sql.py", line 282, in execute
    output = hook.run(
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 404, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 462, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "character"
LINE 3:                 dag_id character varying,
                               ^

[2024-03-12T11:02:43.503+0000] {taskinstance.py:1149} INFO - Marking task as UP_FOR_RETRY. dag_id=dag_with_postgres_operator_v1, task_id=create_postgres_table, execution_date=20240312T110239, start_date=20240312T110242, end_date=20240312T110243
[2024-03-12T11:02:43.568+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 872 for task create_postgres_table (syntax error at or near "character"
LINE 3:                 dag_id character varying,
                               ^
; 1594)
[2024-03-12T11:02:43.623+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2024-03-12T11:02:43.695+0000] {taskinstance.py:3309} INFO - 0 downstream tasks scheduled from follow-on schedule check
